<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_BabyFragment">

    <TextView

        android:text="@string/add_your_babies_details_here"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/babys_name"
            android:id="@+id/et_babys_name"
            android:drawableEnd="@drawable/ic_person"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

   <android.support.v7.widget.AppCompatRadioButton
       android:layout_marginTop="8dp"
       android:layout_marginBottom="8dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <RadioGroup
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <RadioButton
               android:id="@+id/boy"
               android:text="@string/Boy"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:onClick="onRadioButtonClicked"/>
           <RadioButton
               android:id="@+id/girl"
               android:text="@string/girl"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:onClick="onRadioButtonClicked"/>

       </RadioGroup>

    </android.support.v7.widget.AppCompatRadioButton>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        />

    <android.support.v7.widget.AppCompatRadioButton
        android:id="@+id/btn_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_birth_date"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"

        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_submitBabyDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_babies_details"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"

        />

</LinearLayout>